# ForgeIgniter CHANGE LOG
# CodeIgniter 3.x Branch
--------------------------

## Version v1.1

- ForgeIgniter
	¬ Updated: Modular Extensions - HMVC

- CodeIgniter
	¬ Updated to v3.1.0 http://www.codeigniter.com/user_guide/changelog.html

## Version v1.0

- ForgeIgniter
	¬ Fixed: undefined model error and preg_match_all() issues
	¬ Fixed: admin dashboard errors on mysql join alias interpretation
	¬ Updated: Now functions with CI3, a quick summery found below.
		SQL dump, Mimes, Main Config, All modules class names, db config,
		error pages, routes & modules routes, root index, 

- CodeIgniter
	¬ Updated to v3.0.3 http://www.codeigniter.com/user_guide/changelog.html
	
- Markdown ITF Lib
	¬ Updated: to support 1.5.1

--------------------

## Previous Versions

Please check the documentation changelog for a full list.

## Basic Version Key

1.x.x = Major Core Updates or huge overhalls.
x.1.x = Improvments or additions to features like libaries etc...
x.x.1 = Minor fixes

